Design the login and register form

--- a/src/components/authentication/authentication.module.css
+++ b/src/components/authentication/authentication.module.css
@@ -14,26 +14,29 @@
     border: 2px solid black;
 } */
 
-.left-blog{
-    /* background-color: #2c3e8f; */
+.signup-left-block{
     width: 50%;
-
+    height: 100vh;
+    background-image: url('../../assets/images/signup_image2.jpg');
+    background-size: contain;
+    background-repeat:no-repeat;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
 }
 
-.left-blog > div {
-    font-size: 30px;
+.signup-left-block > div {
     color: #f89909;
     letter-spacing: 2px;
     padding: 30px;
     text-align: center;
-    margin-top: -20px;
+    margin-top: 140px;
 }
 
-.image{
-    width: 400px;
-    height: auto;
-}
 
-.right-blog{
+.signup-right-block{
     width: 50%;
+    height: 100vh;
+    
 }
